Fix up some overflow issues on the view-models screen. Cleanup form for adding new models

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -5,6 +5,10 @@ html, body
     width: 0
     height: 0
     clear: both
-
+textarea {
+    resize: none;
+    overflow: scroll;
+}
 @import 'student.styl'
 @import 'models.styl'
+@import 'create-model-form.styl'
