--- a/src/styles/models.styl
+++ b/src/styles/models.styl
@@ -5,10 +5,10 @@
     margin-bottom 5px
     border-radius: 20px;
     background: #73AD21;
+    word-wrap: break-word
     .titleArea
         display: inline-block
         vertical-align: top
-        height: inheirt
         width: 10%
         h2
             text-align: center
